<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ColoredSettings</string>
    <string name="menu_settings">Settings</string>
    <string name="capturetext">Capture Settings</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="yellow">Yellow</string>
    <string name="black">Black</string>
    <string name="cards">Colors</string>
    <string name="torch">Torch</string>
    <string name="white">White</string>

</resources>